--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,7 +14,7 @@
         tools:layout_editor_absoluteY="0dp">
 
         <EditText
-            android:id="@+id/txtRegEmail"
+            android:id="@+id/textRegEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:width="250dp"
